--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,16 @@
 services:
   - type: web
-    name: news
-    env: java
-    region: singapore
-    buildCommand: "./gradlew build"
-    startCommand: "java -jar build/libs/example-0.0.1-SNAPSHOT.jar"
+    name: news-spring-backend
+    env: docker
     plan: free
+    buildCommand: ""   # Dockerfile 내부에서 빌드함
+    startCommand: ""   # Dockerfile 내부에서 실행함
+    envVars:
+      - key: DB_URL
+        value: YOUR_DB_URL
+      - key: DB_USERNAME
+        value: YOUR_DB_USERNAME
+      - key: DB_PASSWORD
+        value: YOUR_DB_PASSWORD
+      - key: OPEN_API_KEY
+        value: YOUR_OPEN_API_KEY
