--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.address=0.0.0.0
-server.port=${PORT:10000}
+#server.port=${PORT:10000}
+server.port=10000
 openai.api.key=${OPEN_API_KEY}
